--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,33 @@
 <meta charset="UTF-8">
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title> Intruder Token ICO Sale </title>
+<title> Intruder Coin </title>
+<link rel = "icon" href ="img/icon.png"   type = "image/x-icon"> 
 <link href = "css/bootstrap.min.css" rel="stylesheet">
-
-
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	 
+	 <nav id="navbar">
+        <div id="logo">
+            <img src="img/logo.png" alt="Intruder ICO">
+        </div>
+
+        <ul>
+            <li class="item"><a href="#">Home</a></li>
+            <li class="item"><a>ICO</a></li>
+            <li class="item"><a>Wallet</a></li>
+            <li class="item"><a>About Us</a></li>
+            <li class="item"><a>Contact Us</a></li>
+            
+        </ul>
+</nav>
+    
+    <section id="home">
 <div class="container" style= "width: 650px;">
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="text-center"> INTRUDER TOKEN ICO SALE</h1>
+			<h1 class="text-center"> INTRUDER COIN </h1>
 			<hr/>
 			<br/>
 		</div>
@@ -21,8 +38,8 @@
 		</div>
 		<div id="content" class="text-center" style = "display: none;">
 			<p>
-				Introducing Intruder Token (IGX) !
-				Token Price is <span class="token-price"></span> Ether. You currently have 
+				Introducing Intruder Coin (IGX) !
+				Coin Price is <span class="token-price"></span> Ether. You currently have 
 				<span class="IGX-balance"></span>&nbsp; IGX.
 			</p>
 			<br/>
@@ -32,7 +49,7 @@
 						<input id="numberOfTokens" class="form-control input-lg" type="number" name="number" value="1" min="1" pattern="[0-9]">
 					</input>
 					<span class="input-group-btn">
-						<button type="submit" class="btn btn-primary btn-lg">Buy Tokens</button>
+						<button type="submit" class="btn btn-primary btn-lg">Buy Coins</button>
 					</span>
 					</div>
 				</div>
@@ -47,13 +64,99 @@
 			</p>
 			<hr>
 			<p id="accountAddress"></p>
+				 </div>
 		</div>
 	</div>
 </div>
+			 </section>
+
+			 <hr>
+
+			 <section id="intro">
+			 	<h1 class="text-center"></h1>
+			 	<hr/>
+			<br/>
+			 	<div class="flex-container">
+			 	<img src="img/what-is-ethereum.png" alt="What is Ethereum" style="width:40%;height:40%;">
+			  <div class="box"><h2>What is IGX ?</h2><h3>Intruder Coin(IGX) is a digital and global money system currency. It allows people to send or receive money across the internet, even to someone they don't know or don't trust. Money can be exchanged without being linked to a real identity. The mathematical field of cryptography is the basis for IGX's security.</h3><button class="btn btn-primary btn-lg">Read More</button>
+			 	</div>
+			 </div>
+			 </section>
+			 	<hr>
+			 <section id="fin">
+			 	<h1 class="text-center"></h1>
+			 	<hr/>
+			<br/>
+			 	<div class="flex-container">
+			 	<img src="img/impact_transparent.png" alt="impact_transparent" style="width:40%;height:40%;">
+			  <div class="box"><h2>A fairer financial system</h2><h3>Today, billions of people can’t open bank accounts, others have their payments blocked. IGX's decentralized finance (DeFi) system never sleeps or discriminates. With just an internet connection, you can send, receive, borrow, earn interest, and even stream funds anywhere in the world.</h3><button class="btn btn-primary btn-lg">Explore DeFi</button>
+			 	</div>
+				</div>
+			 </section>
+
+    			<hr>
+    		<section id="asset">
+			 	<h1 class="text-center"></h1>
+			 	<hr/>
+			<br/>
+			 	<div class="flex-container">
+			 	<img src="img/infrastructure_transparent.png" alt="infrastructure_transparent" style="width:40%;height:40%;">
+			  <div class="box"><h2>The internet of assets</h2><h3>IGX isn't just for digital money. Anything you can own can be represented, traded and put to use as non-fungible tokens (NFTs). You can tokenise your art and get royalties automatically every time it's re-sold. Or use a token for something you own to take out a loan. The possibilities are growing all the time.</h3><button class="btn btn-primary btn-lg">More on NFT.</button></div>
+			  	</div>
+			  </section>
+
+		<section id=services-container>
+			<h1>Founders</h1>
+		<div id="services">
+		<div class="box">
+		<img src="img/logoY.jpg" alt="Yogesh Singh Img">
+		<h3 class="text-center">  Yogesh Singh  </h3>
+		<p class="text-center">Founder CEO</p>
+		<button class="btn btn-primary btn-lg">Connect</button>
+		</div>
+		<div class="box">
+		<img src="img/Yogi.jpeg" alt="Yogendra Bhadoria Img">
+		<h3 class="text-center">Yogendra Bhadoria</h3>
+		<p class="text-center">Founder CTO</p>
+		<button class="btn btn-primary btn-lg">Connect</button>
+		</div>
+		</div>
+		</section>
+
+
+		 <section id="contact">
+        <h1 class="text-center">Contact Us</h1>
+        <div id="contact-box">
+            <form action="">
+                <div class="form-group">
+                    <label for="name">Name: </label>
+                    <input type="text" name="name" id="name" placeholder="Enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email: </label>
+                    <input type="email" name="name" id="email" placeholder="Enter your email">
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number: </label>
+                    <input type="phone" name="name" id="phone" placeholder="Enter your phone">
+                </div>
+                <button class="btn btn-primary btn-lg">Submit</button>
+            </form>
+        </div>
+    </section>
+    <footer>
+        <div class="text-center">
+            Copyright &copy; www.IntruderCoin.com All rights reserved!
+        </div>
+    </footer>
+
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/web3.min.js"></script>
 <script type="text/javascript" src="js/truffle-contract.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
+
 </body>
 </html>
